--- a/index.html
+++ b/index.html
@@ -294,6 +294,14 @@
 								<p class="company-info">Securing the Clients and internet</p>
 							</div>
 						</div>
+						<div class="col-md-6">
+							<div class="experience-single">
+								<h4 class="company">Yogosha</h4>
+								<p class="position-name">Community Member</p>
+								<p class="mute-text">November 2021 - Present</p>
+								<p class="company-info">Yogosha is a private bug bounty platform</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
