--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
 							<h4 class="about-sub-heading">Hi , I am Prashant Saini And here is some detail about me.</h4>
 							<p class="about-text">I am an Information security Enthusiast , And a wanna be Red Teamer.<br/>
 
-							I am a 19 y/o  final year B.tech CSE Student.I have been into InfoSec since 2019.I have experience in Active Directory , Web Application , Network Penetration Testing , VAPT and Some Red Team Attack Vectors. I sharpen my skills on the Hackthebox and gained GURU rank on it and i do post writeups of active/retired machines on my blog. I am a synack red team member and do Bug Hunting on their platform
-							. I have completed two hackthebox Pro labs Rastalabs and Offshore. And i am actively looking for any opportunity in the InfoSec Field for a Red Team / Penetration Testing role. I had been a state level Cricket player in my past
+							I am a 20 y/o  final year B.tech CSE Student.I have been into InfoSec since 2019.I have experience in Active Directory , Web Application , Network Penetration Testing , VAPT and Some Red Team Attack Vectors. I sharpen my skills on the Hackthebox and gained GURU rank on it and i do post writeups of active/retired machines on my blog. I am a synack red team member , Community Mmeber at yogosha and do Bug Hunting on their platform
+							. I have completed two hackthebox Pro labs Rastalabs and Offshore. And i am actively looking for any opportunity in the InfoSec Field for a Red Team / Penetration Testing role. I won Silver medal in IndiaSkills 2022 Skill Cybersecurity National Competition (Represented Uttrakhand) I had been a state level Cricket player in my past
 							</p>
 							<a href="https://blog.0xprashant.in" target="_blank"  class="default-btn"><i class="ti-agenda"></i>My Blog</a>
 							<a href="https://0xprashant.in/resume.pdf" target="_blank"  class="default-btn"><i class="ti-agenda"></i>Download My Resume</a>
@@ -305,27 +305,7 @@
 					</div>
 				</div>
 			</div>
-			<!-- end of experience-wrapper -->			
-
-
-			<!-- begin of hall offame-wrapper -->
-			<!--<div id="hall" class="wrapper experience-wrapper">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-md-12">
-							<h3 class="wrapper-heading">Hobbies</h3>
-						</div>
-						<div class="col-md-6">
-							<div class="experience-single">
-								<h4 class="company">Playing Cricket</h4>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			
-			<!-- end of walloffame-wrapper -->			
-
+			<!-- end of experience-wrapper -->					
 
 
 			<!-- begin of certs-wrapper -->
@@ -378,6 +358,15 @@
 								<p class="position-name">Hackthebox</p>
 								<p class="mute-text"><a href="https://blog.0xprashant.in/posts/htb-bug/" target="_blank">The Writeup</a></p>
 								<p class="mute-text">29 AUG 2020</p>
+							</div>
+						</div>
+
+						<div class="col-md-6">
+							<div class="experience-single">
+								<h4 class="company">Silver Medalist in Nationals and Regional Cybersecurity Competition</h4>
+								<p class="position-name">IndiaSkills 2021 Cybersecurity</p>
+								<p class="mute-text"><a href="https://www.facebook.com/prashant.saini.37201/posts/3069463650004752" target="_blank">Achievement Facebook Post</a></p>
+								<p class="mute-text">10 Jan 2022</p>
 							</div>
 						</div>
 
