--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 						</div>
 						<div class="col-lg-12 col-md-12">
 							<div class="contact-info">
-								<p><span class="ti-email"></span>prashant.saini345@gmail.com</p>
+								<p><span class="ti-email"></span>mail@0xprashant.in</p>
 							</div>
 							</div>
 						</div>
@@ -558,7 +558,7 @@
 							<a href="https://www.instagram.com/0xprashant/" target="_blank">Instagram</a>
 							<a href="https://www.linkedin.com/in/0xprashant/" target="_blank">Linkedin</a>
 						</div>
-						<p class="footer-copyright">© Copyright 2020 - Prashant Saini</p>
+						<p class="footer-copyright">© Copyright 2021 - Prashant Saini</p>
 					</div>
 				</div>
 			</footer>
