--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 							<h4 class="about-sub-heading">Hi , I am Prashant Saini And here is some detail about me.</h4>
 							<p class="about-text">I am an Information security Enthusiast , And a wanna be Red Teamer.<br/>
 
-							I am a 20 y/o  final year B.tech CSE Student.I have been into InfoSec since 2019.I have experience in Active Directory , Web Application , Network Penetration Testing , VAPT and Some Red Team Attack Vectors. I sharpen my skills on the Hackthebox and gained GURU rank on it and i do post writeups of active/retired machines on my blog. I am a synack red team member , Community Mmeber at yogosha and do Bug Hunting on their platform
+							I am a 20 y/o  final year B.tech CSE Student.I have been into InfoSec since 2019 and so far i am OSCP, CRTE certified.I have experience in Active Directory , Web Application , Network Penetration Testing , VAPT and Red Teaming. I sharpen my skills on the Hackthebox and gained GURU rank on it and i do post writeups of active/retired machines on my blog. I am a synack red team member , Community Mmeber at yogosha and do Bug Hunting on their platform
 							. I have completed two hackthebox Pro labs Rastalabs and Offshore. And i am actively looking for any opportunity in the InfoSec Field for a Red Team / Penetration Testing role. I won Silver medal in IndiaSkills 2022 Skill Cybersecurity National Competition (Represented Uttrakhand) I had been a state level Cricket player in my past
 							</p>
 							<a href="https://blog.0xprashant.in" target="_blank"  class="default-btn"><i class="ti-agenda"></i>My Blog</a>
@@ -328,10 +328,19 @@
 
 						<div class="col-md-6">
 							<div class="experience-single">
+								<h4 class="company">Certified Red Team Expert (CRTP)</h4>
+								<p class="position-name">Pentester Academy</p>
+								<p class="mute-text"><a href="https://www.credential.net/c58c6f0d-ab80-45a1-b67c-7857bc4a6de0#gs.5ghiov" target="_blank">Verify Certificate</a></p>
+								<p class="mute-text">Credential ID: OS-96522</p>
+							</div>
+						</div>
+
+						<div class="col-md-6">
+							<div class="experience-single">
 								<h4 class="company">Hackthebox Rastalabs</h4>
 								<p class="position-name">Hackthebox Penetration testing labs</p>
 								<p class="mute-text"><a href="./RastaLabs-certificate.pdf" target="_blank">Verify Certificate</a></p>
-								<p class="mute-text">Credential ID: HTBCERT-4D9FFCBC42</p>
+								<p class="mute-text">Credential ID: 54023859</p>
 							</div>
 						</div>
 
