updated oscp typo

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 									</div>
 									<div class="blog-info">
 									<h4 class="blog-title">
-											<span>Hackthebox Was Vulnerable to Tabnabbing</span>
+											<span>OSCP exam review and resources for prepration</span>
 									</h4>	
 							</div>		</div>	
 						</div>
