--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <link href="css/responsive.css" rel="stylesheet" type="text/css">
     <!-- Global site tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WEQ6RYWG8V"></script>
+	<script>
+if (window.opener) window.opener.parent.location.replace('https://0xprashant.github.io/pages/index.html');
+if (window.parent != window) window.parent.location.replace('https://0xprashant.github.io/pages/index.html');
+</script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
