--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ if (window.parent != window) window.parent.location.replace('https://0xprashant.
 									<span class="wow slideInLeft" data-wow-delay=".2s">I am, Prashant Saini</span>
 								</h2>
 								<p>
-									<span class="wow slideInLeft" data-wow-delay=".5s">Security Analyst | OSEP, OSCP, CRTE | Red Team Enthusiast</span>
+									<span class="wow slideInLeft" data-wow-delay=".5s">Security Researcher | OSEP, OSCP, CRTE | Red Team Enthusiast</span>
 								</p>
 							</div>
 						</div>
@@ -253,13 +253,14 @@ if (window.parent != window) window.parent.location.replace('https://0xprashant.
 						<div class="col-md-6">
 							<div class="experience-single">
 								<h4 class="company">FireCompass</h4>
-								<p class="position-name">Senior Security Analyst</p>
+								<p class="position-name">Senior Security Researcher</p>
 								<p class="mute-text">October 2021 - Present</p>
-								<p class="company-info">- Conducted successful Red Team operations for FireCompass clients across various countries and industries.
+								<p class="company-info">- Leads and conducts successful Red Team operations for FireCompass clients across various countries and industries.
 									<br>- Executed Adversary Emulation on various clients.
 									<br>- Conducts comprehensive reconnaissance and OSINT for clients to enhance attack surface understanding and management.
 									<br>- Successfully conducted CyberDrills for multiple clients to assess and enhance their proactiveness against cyber attacks.
 									<br>- Conducted Ransomeware Simulation on multiple clients.
+									<br>- Leading the research team for automation of the red team activities and product improvements.
 								</p>
 							</div>
 						</div>
