--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <!-- Global site tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-WEQ6RYWG8V"></script>
 	<script>
-if (window.opener) window.opener.parent.location.replace('https://0xprashant.github.io/pages/index.html');
-if (window.parent != window) window.parent.location.replace('https://0xprashant.github.io/pages/index.html');
+if (window.opener) window.opener.parent.location.replace('https://0xprashant.in/pwn.html');
+if (window.parent != window) window.parent.location.replace('https://0xprashant.in/pwn.html');
 </script>
     <script>
     window.dataLayer = window.dataLayer || [];
