--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Prashant Saini</title>
     <!-- Favicon -->
     <link href="img/favicon.ico" type="image/png" rel="icon">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- All CSS -->
     <link href="css/plugins.css" rel="stylesheet" type="text/css">
@@ -107,32 +108,56 @@ if (window.parent != window) window.parent.location.replace('https://0xprashant.
 			<!-- end of header -->
 
 			<!-- begin of home-wrapper -->
-			<div class="home-wrapper">
-				<div class="container-fluid">
-					<div class="row align-items-center">
-						<div class="col-md-5 col-sm-5">
-							<div class="hero-img wow fadeIn" data-wow-delay=".2s">
-								<div class="shape"></div>
-								<!-- hero image -->
-								<img class="img-fluid" src="img/IMG_2147-resize.png" alt="Prashant Saini">
-							</div>
-						</div>
-
-						<div class="col-md-7 col-sm-7">
-							<div class="hero-content">
-								<h2 class="intro-name">
-									<span class="wow slideInLeft">Greetings</span>
-									<span class="wow slideInLeft" data-wow-delay=".2s">I am, Prashant Saini</span>
-								</h2>
-								<p>
-									<span class="wow slideInLeft" data-wow-delay=".5s">Security Researcher | OSEP, OSCP, CRTE | WorldSkills 2024 Cybersecurity Champion 🇮🇳| Red Team Enthusiast</span>
-								</p>
-							</div>
-						</div>
-					</div>
+<div class="home-wrapper">
+	<div class="container-fluid">
+	  <div class="row align-items-center">
+		<div class="col-md-5 col-sm-5">
+		  <div class="hero-img wow fadeIn" data-wow-delay=".2s">
+			<div class="shape"></div>
+  
+			<!-- Bootstrap Carousel -->
+			<div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
+			  <div class="carousel-inner">
+				<div class="carousel-item active">
+				  <img class="d-block w-100" src="img/IMG_2147-resize.png" alt="Image 1">
 				</div>
+				<div class="carousel-item">
+				  <img class="d-block w-100" src="img/worldskills1.jpg" alt="Image 2">
+				</div>
+				<div class="carousel-item">
+				  <img class="d-block w-100" src="img/worldskills2.jpg" alt="Image 3">
+				</div>
+			  </div>
+			  <!-- Highlighted Previous Arrow -->
+			  <button class="carousel-control-prev highlighted-arrow" type="button" data-bs-target="#imageCarousel" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			  </button>
+  
+			  <!-- Highlighted Next Arrow -->
+			  <button class="carousel-control-next highlighted-arrow" type="button" data-bs-target="#imageCarousel" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			  </button>
 			</div>
-			<!-- end of home-wrapper -->
+		  </div>
+		</div>
+  
+		<div class="col-md-7 col-sm-7">
+		  <div class="hero-content">
+			<h2 class="intro-name">
+			  <span class="wow slideInLeft">Greetings</span>
+			  <span class="wow slideInLeft" data-wow-delay=".2s">I am, Prashant Saini</span>
+			</h2>
+			<p>
+			  <span class="wow slideInLeft" data-wow-delay=".5s">Security Researcher | OSEP, OSCP, CRTE | WorldSkills 2024 Cybersecurity Champion | Red Team Enthusiast</span>
+			</p>
+		  </div>
+		</div>
+	  </div>
+	</div>
+  </div>
+  <!-- end of home-wrapper -->
 
 			<!-- begin of about-wrapper -->
 			<div id="about" class="wrapper about-wrapper">
@@ -675,7 +700,7 @@ if (window.parent != window) window.parent.location.replace('https://0xprashant.
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
