Added Medallion medal

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@ if (window.parent != window) window.parent.location.replace('https://0xprashant.
 							<div class="experience-single">
 								<h4 class="company">WorldSkills Medallion for Excellence</h4>
 								<p class="position-name">WorldSkills 2024 Lyon</p>
+								<p class="mute-text"><a href=https://www.credly.com/badges/0a6748fc-cfab-41c7-9142-28a1b438f643/public_url" target="_blank">Verify Achievement</a></p>
 								<p class="mute-text"><a href="https://www.google.com/search?q=prashant+saini+worldskills" target="_blank">News Articles on me</a></p>
-								<p class="mute-text"><a href="https://www.flickr.com/photos/tags/prashantsaini" target="_blank">During Competition Photos</a></p>
 								<p class="mute-text">15 Sep 2024</p>
 								<p class="mute-text">I represented my country in the WorldSkills 2024 Cyber Security competition, which took place in Lyon, France, from September 10 to 15. After four days of intense competition among 21 nations, I proudly secured 4th place and earned the Medallion for Excellence.</p>
 								<img src="img/mfe.png" alt="indiaskills Image" class="worldskills-img">
