Added images in header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="author" content="Prashant Saini">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:image" content="https://0xprashant.in/img/worldskills1.jpg">
+  	<meta name="twitter:card" content="summary_large_image" />
+  	<meta property="twitter:image" content="https://0xprashant.in/img/worldskills1.jpg" />
+  	<meta name="twitter:description" content="Hi There , I am Prashant Saini Aka 0xPrashant. I am a Information Security Enthusiast. I am from Roorkee,Uttrakhand,India. I am OSCP, OSEP, CRTE certified and i am a worldskills winner.">
+ 
 
     <!-- Title -->
     <title>Prashant Saini</title>
