--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 <head>
     <meta charset="utf-8">
-	<meta name='og:title' content='Prashant Saini - A dedicated information security enthusiast who thrives on solving complex problems and exploring the world of hacking.'>
+	<meta name='og:title' content='Prashant Saini: - A dedicated information security enthusiast who thrives on solving complex problems and exploring the world of hacking.'>
     <meta name="description" content="Hi There , I am Prashant Saini Aka 0xPrashant. I am a Information Security Enthusiast. I am from Roorkee,Uttrakhand,India. I am OSCP, OSEP, CRTE certified and i am a worldskills winner.">
     <meta name="keywords" content="Prashant Saini, 0xprashant, prashant saini, prashantsaini, prashantsaini hacker, prashantsaini redteam, Bug Bounty Hunter, prashant saini worldskills, prashant saini cybersecurity, prashant saini, prashant saini hacker">
     <meta name="author" content="Prashant Saini">
