--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ if (window.parent != window) window.parent.location.replace('https://0xprashant.
 								Beyond my professional pursuits, I have a deep passion for machines, including cars and motorcycles, and find solace in the gym. An avid cricket enthusiast, my love for the sport translated into three appearances in district-level cricket from 2014 to 2016, reflecting my dedication and skill on the field.
 							</p>
 							<a href="https://blog.0xprashant.in" target="_blank"  class="default-btn"><i class="ti-agenda"></i>My Blog</a>
-							<a href="https://0xprashant.in/prashant_resume.pdf" target="_blank"  class="default-btn"><i class="ti-agenda"></i>Download My Resume</a>
+							<a href="https://0xprashant.in/prashant_cv.pdf" target="_blank"  class="default-btn"><i class="ti-agenda"></i>Checkout My CV</a>
 
 							<!-- social profile links -->
 							<div class="social-links">
